# rust-ssh-demo

./: .env  .env.example  .gitignore  Cargo.toml  README.md  TODO.md
src/: cli.rs  exec.rs  formatter.rs  handler.rs  helpers.rs  main.rs  remote.rs  ssh.rs  utils.rs
src/commands/: action.rs  control.rs  file.rs  info.rs  install.rs  mod.rs
src/executers/: local.rs  remote.rs
src/formatters/info/: mod.rs  service-installed-check.rs  temperature.rs
src/handlers/: action.rs  control.rs  file.rs  info.rs  install.rs  mod.rs  test.rs
src/utils/: args.rs  executer.rs  mod.rs
