[package]
name = "rust-ssh-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[target.'cfg(windows)'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }

[target.'cfg(unix)'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
